--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.1",
+    "moment": "^2.22.2",
     "mysql2": "^1.4.2",
     "sequelize": "^4.13.5"
   },
